static/css/estimating.css
/* sidebar coloring for page */
.nav-sidebar > .active > a {
  background-color: #5cb85c;
}

.nav-sidebar > li > a {
  color: #4cae4c;
}

.bid-status > .label > a > small,
.bid-status > .label > a > span {
  color: #FFF;
}

.bid-status {
  margin-top: 0px;
  margin-bottom: 30px;
}

.award-button:hover {
  color: #fff !important;
  background-color: #5cb85c !important;
  content: "Award Bid!" !important;
}

.bid-sidebar > #delete-bid {
  bottom: 0;
  position: fixed;
  margin-bottom: 10px;
}

.date-input {
  width: 60% !important;
}

.sub-bid-btn {
  margin-top: -5px;
  margin-right: -10px;
}

#subBidModal {
  color: #4E4E4E;
}

